@@ -8008,6 +8008,11 @@ void menu_accessibility_gray_scale(MENU_ITEM_PARAMETERS)
 	menu_interface_rgb_inverse_common();    
 }
 
+void menu_interface_gui_sounds(MENU_ITEM_PARAMETERS)
+{
+    accessibility_enable_gui_sounds.v ^=1;
+}
+
 void menu_accessibility_menu(MENU_ITEM_PARAMETERS)
 {
 
@@ -8066,6 +8071,13 @@ void menu_accessibility_menu(MENU_ITEM_PARAMETERS)
         menu_add_item_menu_tooltip(array_menu_common,"Disables flash for emulated machines and also for menu interface");
         menu_add_item_menu_ayuda(array_menu_common,"Disables flash for emulated machines and also for menu interface");
 
+        menu_add_item_menu(array_menu_common,"",MENU_OPCION_SEPARADOR,NULL,NULL);
+
+        menu_add_item_menu_en_es_ca(array_menu_common,MENU_OPCION_NORMAL,menu_interface_gui_sounds,NULL,
+            "Enable GUI Sounds","Activar sonidos interfaz","Activar sons interfície");
+        menu_add_item_menu_prefijo_format(array_menu_common,"[%c] ",(accessibility_enable_gui_sounds.v ? 'X' : ' ' ));
+        menu_add_item_menu_tooltip(array_menu_common,"Enable sounds for GUI events");
+        menu_add_item_menu_ayuda(array_menu_common,"Enable sounds for GUI events");
 
  
         menu_add_item_menu(array_menu_common,"",MENU_OPCION_SEPARADOR,NULL,NULL);
